--- a/gallery.html
+++ b/gallery.html
@@ -20,20 +20,20 @@
                 <h1>My Hobbies and Interests</h2><!-- Heading ng gallery page -->     
                 <div class="gallery-container"><!-- Container ng gallery -->
                     <div class="gallery-item"><!-- Gallery item para ma edit ko ng maayos -->
-                        <img src="/raveweb-main/raveimage/iop.webp" alt="VALORANT"><!-- Image ng VALORANT -->
+                        <img src="iop.webp" alt="VALORANT"><!-- Image ng VALORANT -->
                          <div class="caption">Playing Valorant</div><!-- Caption ng VALORANT -->
                     </div>
                     <div class="gallery-item">
-                        <img src="/raveweb-main/raveimage/oip (3).webp" alt="Sleeping"><!-- Image ng Sleeping -->
+                        <img src="oip (3).webp" alt="Sleeping"><!-- Image ng Sleeping -->
                          <div class="caption">Sleeping</div><!-- Caption ng Sleeping -->
                     </div>
                     <div class="gallery-item">
-                        <img src="/raveweb-main/raveimage/clashroyale.jpg" alt="Clash Royale"><!-- Image ng Clash Royale -->
+                        <img src="clashroyale.jpg" alt="Clash Royale"><!-- Image ng Clash Royale -->
                         <div class="caption">Playing Clash Royale</div><!-- Caption ng Clash Royale -->
                         
                     </div>
                     <div class="gallery-item">
-                        <img src="/raveweb-main/raveimage/sasrir-vs-klein-and-co-v0-lz5k9m7tuppc1.webp" alt="Lord of The Mysteries"><!-- Image ng Lord of The Mysteries -->
+                        <img src="sasrir-vs-klein-and-co-v0-lz5k9m7tuppc1.webp" alt="Lord of The Mysteries"><!-- Image ng Lord of The Mysteries -->
                         <div class="caption">Reading Webnovel</div><!-- Caption ng Lord of The Mysteries -->
                     </div>
                 </div>
@@ -48,4 +48,5 @@
 </body>
 
 </html>
+
 
